# secretsanta

./: .gitignore  pyproject.toml
backend/app/: database.py  main.py  models.py  settings.py
backend/app/discord/: bot.py
